<resources>
    <string name="app_name">蜂域·智能社区</string>

    <string name="search_word">搜索:例如 百事</string>
    <string name="search_shop">搜索小区</string>

    <string name="search_hot">热门搜索</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loading_data">正在加载信息</string>
    <string name="enjoy_now">立即体验</string>

    <string name="title">标题:</string>
    <string name="input_title">请输入标题</string>

    <string name="comment">评论</string>

    <string name="content">内容:</string>
    <string name="input_content">请输入内容</string>

    <string name="image">图片</string>
    <string name="building">店铺筹备中</string>

    <string name="search_address">请输入您要查找的位置</string>

    <string name="register1">验证手机</string>
    <string name="register2">设置密码</string>
    <string name="register3">商户信息</string>
    <string name="register4">资质认证</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="get_code">获取\n验证码</string>
    <string name="next">下一步</string>
    <string name="hongbaodixian">红包抵现</string>

    <string name="goods_all">全部商品</string>
    <string name="goods_my">本店商品</string>
    <string name="goods_all_notif">请认真选择本店有的现货打钩 （随意打钩上货将影响财务正常结算）</string>
    <string name="goods_my_notif">如本店新增产品，请在全部商品里及时添加。</string>
    <string name="goods_make">确认商品</string>
    <string name="order_make">下单</string>

    <!-- //1-5  "待付款",@"待发货",@"待收货",@"交易完成",@"拒收"]; -->

    <string name="order_pay">待付款</string>
    <string name="order_dai2">待发货</string>
    <string name="order_dai_shou2">待收货</string>
    <string name="order_track">订单追踪</string>
    <string name="loading_no">0</string>
    <string name="di">抵</string>

    <string name="order_qiang">可抢订单</string>
    <string name="order_dai">待发货</string>
    <string name="order_dai_shou">配送中</string>
    <string name="order_ok">交易完成</string>
    <string name="order_re">拒收</string>
    <string name="order_rang">让单</string>

    <string name="watch_all_order">查看全部订单</string>

    <string name="all_order">全部订单</string>

    <string name="submit">提交</string>
    <string name="date">日期</string>
    <string name="new_add">新增(人)</string>
    <string name="huoyuelv">活跃率(%)</string>
    <string name="totle">累计(人)</string>

    <string name="kakawuyou_shop">卡卡无忧店铺</string>
    <string name="good_manager">商品管理</string>
    <string name="huowu_manager">货物管理</string>
    <string name="send_manager">配送管理</string>
    <string name="shanghu_info">商户信息</string>
    <string name="zengzhi_service">增值服务</string>
    <string name="gold_vip">金牌会员</string>
    <string name="zengzhi_service2">增值服务2</string>

    <string name="send_home">送货上门</string>
    <string name="at_shop">到店自取</string>

    <string name="input_phone">请输入手机号码</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_pass_confirm">请确认密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_name">请输入收件人姓名</string>
    <string name="input_card_name">请输入持卡人姓名</string>
    <string name="input_no">请输入身份证号</string>
    <string name="input_card_no">请输入持卡人身份证号</string>
    <string name="input_bank_name">请输入银行名称</string>
    <string name="select_bank">请设置银行账号</string>
    <string name="input_bank_zhihang">请输入开户行支行名称</string>
    <string name="input_bank_num">请输入银行卡号</string>
    <string name="input_shop_name">请输入商户名称</string>
    <string name="loc_info">地理位置信息</string>
    <string name="select_address">请在地图上选择送货地址</string>
    <string name="input_address_details">请输入详细位置</string>
    <string name="provicence">省份</string>
    <string name="city">城市</string>
    <string name="input_tixian_pass">请输入提现密码</string>


    <string name="zizhi_content">享受平台更多服务请先进行商户资质认证</string>
    <string name="zizhirenzheng">资质认证</string>
    <string name="hand_no">请上传手持证件的照片</string>
    <string name="hand_bank">请上传手持银行卡照片</string>
    <string name="hand_zizhi">请上传营业执照照片</string>

    <string name="more">更多</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="shopping_car_add">加入购物车</string>
    <string name="consumption">消费(元)</string>
    <string name="save">节省(元)</string>
    <string name="commission">佣金(元)</string>

    <string name="my_pakeage">我的钱包</string>
    <string name="coupons">优惠券</string>
    <string name="e_sore">我的抵用券</string>
    <string name="miguan_sore">我的蜜罐</string>
    <string name="jifen_sore">我的积分</string>
    <string name="forum_menage">帖子管理</string>
    <string name="push_message">推送消息</string>
    <string name="manage_address">地址管理</string>
    <string name="message">消息</string>
    <string name="bind_phone">绑定手机</string>
    <string name="set_more">更多设置</string>
    <string name="kf_phone">客服电话</string>
    <string name="kf_phone_num">400-9977-616</string>
    <string name="use_e_case">使用电子现金</string>
    <string name="use_e_hb">使用电子现金券(元)</string>
    <string name="join_phone">加盟招商热线</string>
    <string name="gonghuo">我要供货</string>
    <string name="gonghuo_phone">0371-55891266</string>

    <string name="shop_recommed">本店推荐</string>

    <string name="add_shopping_car">添加到购物车</string>
    <string name="add_shopping_car_now">立即购</string>
    <string name="prc_and_text_des">图文详情</string>


    <string name="about_us">关于我们</string>
    <string name="contract_us">联系我们</string>
    <string name="feet">意见反馈</string>
    <string name="xieyi">用户协议</string>
    <string name="version_check">版本检测</string>
    <string name="clear_data">清除缓存</string>
    <string name="input_yijian">请输入您宝贵的建议</string>
    <string name="input_tixian_jine">请输入提现金额</string>
    <string name="input_marker">请留下您的备注</string>
    <string name="input_refuse">请留下您拒绝收货的原因</string>

    <string name="buy">购买</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>

    <string name="receiving_address">收货地址</string>
    <string name="receiving_way">收货方式</string>
    <string name="add_receiving_address">添加新的收货地址</string>
    <string name="pay_now">支付</string>
    <string name="payment">支付方式</string>

    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝</string>
    <string name="send_pay">到店自取</string>

    <string name="send_now">立即送</string>
    <string name="send_time">定时送</string>
    <string name="keyong_hongbao">可用红包抵现</string>

    <string name="order_total">订单总额(元)</string>
    <string name="e_case">电子现金(元)</string>
    <string name="discount">优惠(元)</string>
    <string name="select_send_date">请选择送货时间</string>

    <string name="detail">详情</string>

    <string name="refresh">拒收</string>

    <string name="refuse">拒绝收货</string>

    <string name="fahuo">发货</string>
    <string name="shouhuo">收货</string>
    <string name="send_mark_sure">确认送达</string>
    <string name="pay">付款</string>
    <string name="delete_order">删除订单</string>
    <string name="r_shouhuo">拒绝收货</string>
    <string name="cuifa">催发</string>
    <string name="fahuo_notify">发货提醒</string>


    <string name="order_num">订单号</string>
    <string name="status">状态</string>
    <string name="type">类型</string>
    <string name="pay_ment">付款方式</string>
    <string name="order_total_price">订单总额(元)</string>
    <string name="send_address">收货地址</string>
    <string name="send_type">配送方式</string>
    <string name="order_createtime">交易时间</string>
    <string name="order_send_type">配送方式</string>
    <string name="order_send_time">送达时间</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="shou_code">收货码</string>

    <string name="ok">确定</string>

    <string name="i_want_open_a_shop">我要开店</string>

    <string name="unlogin_user">火星用户</string>


    <!-- 多图选择 -->
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
</resources>
