<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include layout="@layout/view_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/view_login"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/my_header_bg"
                android:background="@mipmap/ic_my_header_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <dev.mirror.library.view.CircleImageView
                    android:id="@+id/c_img"
                    android:layout_width="@dimen/my_header"
                    android:layout_height="@dimen/my_header"
                    android:src="@mipmap/ic_default_zfx_w" />

                <TextView
                    android:id="@+id/shop_name"
                    style="@style/TvIndexClass"
                    android:layout_below="@id/c_img"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" 
                android:visibility="gone">

                <LinearLayout style="@style/LLMy1" >

                    <TextView
                        style="@style/TvMyHint"
                        android:text="@string/consumption" />

                    <TextView style="@style/TvMyRed" />
                </LinearLayout>

                <View style="@style/Line2" />

                <LinearLayout style="@style/LLMy1" >

                    <TextView
                        style="@style/TvMyHint"
                        android:text="@string/save" />

                    <TextView style="@style/TvMyGreen" />
                </LinearLayout>

                <View style="@style/Line2" />

                <LinearLayout style="@style/LLMy1" >

                    <TextView
                        style="@style/TvMyHint"
                        android:text="@string/commission" />

                    <TextView style="@style/TvMyRed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_order1"
                    style="@style/TvMyOrder"
                    android:drawableTop="@mipmap/ic_user_vip_s"
                    android:text="@string/order_pay" />

                <View style="@style/Line2" />

                <TextView
                    android:id="@+id/tv_order2"
                    style="@style/TvMyOrder"
                    android:drawableTop="@mipmap/ic_input_name_s"
                    android:text="@string/order_dai" />

                <View style="@style/Line2" />

                <TextView
                    android:id="@+id/tv_order3"
                    style="@style/TvMyOrder"
                    android:drawableTop="@mipmap/ic_user_good_s"
                    android:text="@string/order_dai_shou" />

                <View style="@style/Line2" />

                <TextView
                    android:id="@+id/tv_order4"
                    style="@style/TvMyOrder"
                    android:drawableTop="@mipmap/ic_ok_s"
                    android:text="@string/order_ok" />

                <View style="@style/Line2" />

                <TextView
                    android:id="@+id/tv_order5"
                    style="@style/TvMyOrder"
                    android:drawableTop="@mipmap/ic_error_s"
                    android:text="@string/order_re" />
            </LinearLayout>

            <View style="@style/Line1" />

            <LinearLayout
                android:id="@+id/view_order"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_order_all_s"
                    android:text="@string/watch_all_order" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>
            
            

            <View
                style="@style/Line1" />

            <LinearLayout
                android:id="@+id/view_track"
                style="@style/LLMyItem">

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_map_s"
                    android:text="@string/order_track" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <LinearLayout
                style="@style/LLMyItem"
                android:layout_marginTop="@dimen/view_margin_top"
                android:visibility="gone" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_pakeage_s"
                    android:text="@string/my_pakeage" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line1" />

            <LinearLayout
                android:id="@+id/view_cash"
                style="@style/LLMyItem"
                android:layout_marginTop="@dimen/view_margin_top" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_counp_s"
                    android:text="@string/e_sore" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line1" />

            <LinearLayout
                android:id="@+id/view_address"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_address_s"
                    android:text="@string/manage_address" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line1" />

            <LinearLayout style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_message_s"
                    android:text="@string/message" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line1" />

            <LinearLayout
                style="@style/LLMyItem"
                android:visibility="gone" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_phone_s"
                    android:text="@string/bind_phone" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>


            <LinearLayout 
                android:id="@+id/view_set"
                style="@style/LLMyItem" 
                android:layout_marginBottom="24dp">

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_set_s"
                    android:text="@string/set_more" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>