<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include layout="@layout/view_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout style="@style/LLMyItem" >

                <TextView
                    style="@style/TvZiZhiTitle"
                    android:drawableLeft="@mipmap/ic_input_name_new" />

                <EditText
                    android:id="@+id/name"
                    style="@style/ETAddress"
                    android:hint="@string/input_name" />
            </LinearLayout>

            <View style="@style/Line3" />

            <LinearLayout style="@style/LLMyItem" >

                <TextView
                    style="@style/TvZiZhiTitle"
                    android:drawableLeft="@mipmap/ic_input_phone_new" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/ETAddress"
                    android:hint="@string/input_phone"
                    android:inputType="phone"
                    android:maxLength="11"/>
            </LinearLayout>

            <TextView
                style="@style/TvMyTitle"
                android:text="@string/loc_info" />

            <LinearLayout
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvZiZhiTitle"
                    android:drawableLeft="@mipmap/ic_input_map_new" />

                <TextView
                    android:id="@+id/map"
                    style="@style/ETAddress"
                    android:gravity="center_vertical"
                    android:hint="@string/select_address" />
            </LinearLayout>

            <View style="@style/Line3" />
            <LinearLayout
                style="@style/LLMyItem" >

            <EditText
                android:id="@+id/street"
                style="@style/ETAddress"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:hint="@string/input_address_details"
                android:minHeight="@dimen/item_normal_height"
                android:singleLine="false"/>
            </LinearLayout>

            

            <LinearLayout
                style="@style/WH_WF_HW_V"
                android:background="@color/main_bg" >

                <Button
                    android:id="@+id/sub"
                    style="@style/BtnRed"
                    android:layout_margin="8dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>